--- a/ui/package.json
+++ b/ui/package.json
@@ -14,7 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +42,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:3001",
   "author": "Bank of Begonia Team",
   "license": "MIT",
   "repository": {
